[tool.poetry]
name = "async-python-sprint-1"
version = "0.1.0"
description = ""
authors = ["Night <xxxtensei@gmail.com>"]
readme = "README.md"
packages = [{include = "async_python_sprint_1"}]

[tool.poetry.dependencies]
python = "^3.9"
pydantic = "^1.10.1"
prettytable = "^3.5.0"


[tool.poetry.group.dev.dependencies]
flake8 = "^5.0.4"
black = {version = "^22.10.0", allow-prereleases = true}
pytest = "^7.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
